# agent-examples

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  sample-environments.yaml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  pr-verifier.yml  scorecard.yaml  security-scans.yaml
a2a/a2a_contact_extractor/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  server.py  test_startup.exp
a2a/a2a_currency_converter/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_startup.exp
a2a/a2a_currency_converter/app/: __main__.py  agent.py  agent_executor.py  test_client.py
a2a/a2a_currency_converter/deployment/: k8s.yaml
a2a/cheerup_agent/: Dockerfile  pyproject.toml
a2a/cheerup_agent/src/cheerup_agent/: __init__.py  agent.py  cheerup_llm.py
a2a/claude_code_agent/: .env.litellm  Dockerfile  README.md  pyproject.toml
a2a/claude_code_agent/src/claude_code_agent/: __init__.py  agent.py  configuration.py  events.py  runner.py  session.py
a2a/claude_code_agent/tests/: conftest.py  test_agent.py  test_configuration.py  test_events.py  test_runner.py  test_session.py
a2a/file_organizer/: pyproject.toml
a2a/file_organizer/src/file_organizer/: __init__.py  agent.py  graph.py
a2a/generic_agent/: README.md  pyproject.toml
a2a/generic_agent/src/generic_agent/: __init__.py  agent.py  config.py  graph.py
a2a/generic_agent/tests/: README.md  manual_test_skill_loading.py  run_skill_test.sh  test_skill_loading.py
a2a/git_issue_agent/: .env.ollama  .env.openai  .env.template  Dockerfile  README.md  a2a_agent.py  pyproject.toml  test_startup.exp
a2a/git_issue_agent/git_issue_agent/: agents.py  config.py  data_types.py  llm.py  main.py  mcp_connect.py  prompts.py  tool_limits.py
a2a/image_service/: .env.openai  pyproject.toml  test_startup.exp
a2a/image_service/src/image_service/: __init__.py  agent.py  graph.py
a2a/recipe_agent/: .dockerignore  Dockerfile  pyproject.toml  test_startup.exp
a2a/recipe_agent/src/recipe_agent/: __init__.py  agent.py  configuration.py  recipe_llm.py
a2a/reservation_service/: .dockerignore  README.md  pyproject.toml  test_agent.py  test_startup.exp
a2a/reservation_service/src/reservation_service/: agent.py  configuration.py  graph.py
a2a/sandbox_agent/: Dockerfile  README.md  pyproject.toml  settings.json  sources.json
a2a/sandbox_agent/src/sandbox_agent/: agent.py  budget.py  configuration.py  context_builders.py  event_schema.py  event_serializer.py  executor.py  graph.py  graph_card.py  landlock_ctypes.py  landlock_probe.py  observability.py  permissions.py  plan_store.py  prompts.py  reasoning.py  sandbox_subprocess.py  sources.py  subagents.py  workspace.py
a2a/sandbox_agent/tests/: test_budget.py  test_context_isolation.py  test_event_serializer.py  test_executor.py  test_executor_loop.py  test_graph.py  test_graph_card.py  test_landlock.py  test_node_visit_indexing.py  test_permissions.py  test_plan_store.py  test_reasoning.py  test_sources.py  test_workspace.py
a2a/simple_generalist/: .dockerignore  .env.ollama  .env.openai  .env.template  Dockerfile  README.md  pyproject.toml  test_startup.exp
a2a/simple_generalist/src/simple_generalist/: __init__.py  main.py
a2a/simple_generalist/src/simple_generalist/a2a_server/: __init__.py  server.py
a2a/simple_generalist/src/simple_generalist/agent/: __init__.py  generalist_agent.py  prompts.py
a2a/simple_generalist/src/simple_generalist/config/: __init__.py  settings.py
a2a/slack_researcher/: .env.template  Dockerfile  README.md  a2a_agent.py  pyproject.toml
a2a/slack_researcher/slack_researcher/: agents.py  config.py  data_types.py  llm.py  main.py  prompts.py
a2a/trivia_agent/: .dockerignore  pyproject.toml  test_startup.exp
a2a/trivia_agent/src/trivia_agent/: __init__.py  agent.py  configuration.py  trivia_agent_llm.py
a2a/trpc-reverse/: go.mod  (+4 more)
a2a/weather_service/: .dockerignore  .env.ollama  .env.openai  Dockerfile  README.md  pyproject.toml  test_startup.exp
a2a/weather_service/deployment/: k8s.yaml
a2a/weather_service/src/weather_service/: __init__.py  agent.py  configuration.py  graph.py  observability.py
mcp/: README.md
mcp/cloud_storage_tool/: cloud_storage_tool.py  pyproject.toml  test_startup.exp
mcp/flight_tool/: flight_tool.py  pyproject.toml  test_startup.exp
mcp/image_tool/: image_tool.py  pyproject.toml  test_startup.exp
mcp/movie_tool/: movie_tool.py  pyproject.toml  test_startup.exp
mcp/reservation_tool/: .dockerignore  PLAN.md  README.md  pyproject.toml  reservation_tool.py  schemas.py  test_startup.exp
mcp/reservation_tool/providers/: base.py  mock.py
mcp/reservation_tool/tests/: test_reservation_tool.py
mcp/shopping_agent/: ARCHITECTURE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  pyproject.toml  shopping_agent.py  simple_test.py  test_client.py  test_mcp_client.py  test_simple.py
mcp/shopping_tool/: .dockerignore  Dockerfile  __init__.py  pyproject.toml  shopping_agent.py  test_startup.exp
mcp/slack_tool/: pyproject.toml  slack_tool.py  test_startup.exp
mcp/weather_tool/: Dockerfile  README.md  pyproject.toml  test_startup.exp  weather_tool.py
mcp/weather_tool/deployment/: k8s.yaml
mcp/wiki_memory_tool/: DEMO.md  Dockerfile  README.md  deploy.py  install_kwiki_skills.py  main.py  mcp_server.py  pyproject.toml  run_local.py  test_acl.yaml  test_agents.py  test_user_access.py  test_user_skills.py  wiki_cli.py  wiki_service.py
mcp/wiki_memory_tool/k8s/: acl-configmap.yaml  deployment.yaml  serviceaccount.yaml
mcp/wiki_memory_tool/skills/wiki-discovery-api/: SKILL.md
mcp/wiki_memory_tool/skills/wiki-discovery-cli/: SKILL.md
mcp/wiki_memory_tool/skills/wiki-discovery-mcp/: SKILL.md
mcp/wiki_memory_tool/skills/wiki-query-api/: SKILL.md
mcp/wiki_memory_tool/skills/wiki-query-cli/: SKILL.md
mcp/wiki_memory_tool/skills/wiki-query-mcp/: SKILL.md
mcp/xquik_tool/: Dockerfile  README.md  pyproject.toml  test_startup.exp  xquik_tool.py
tests/: conftest.py
(+71 files in other folders)
