[project]
name = "a2a-samples-marvin"
version = "0.1.0"
description = "Currency conversion using A2A and Marvin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marvin>=3.2.0",  # 3.0.x/3.1.x incompatible with pydantic-ai>=1.56
    "a2a-sdk>=0.2.5,<1.1.0",
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.22", # Indirect; prevents CVE-2026-24486
    "starlette>=0.49.1",        # Indirect; prevents CVE-2025-62727
    "mcp>=1.23.0",              # Indirect; prevents CVE-2025-66416
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "pydantic-ai>=1.56.0",      # Indirect; prevents CVE-2026-25580
    "filelock>=3.20.1",         # Indirect; prevents CVE-2025-68146
    "fastmcp>=3.2.0",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
    "anthropic>=0.87.0",        # Indirect; prevents CVE-2026-34452, CVE-2026-34450
    "aiohttp>=3.13.4",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
]

[tool.uv.sources]
a2a-samples = { workspace = true }

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.setuptools]
py-modules = ["agent", "agent_executor", "__main__"]

[build-system]
requires = ["setuptools>=80.8"]
build-backend = "setuptools.build_meta"

