[project]
name = "a2a-samples-marvin"
version = "0.1.0"
description = "Currency conversion using A2A and Marvin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marvin>=3.2.0",  # 3.0.x/3.1.x incompatible with pydantic-ai>=1.56
    "a2a-sdk[http-server]>=1.1.0,<2",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "starlette>=1.3.1",        # Indirect; prevents CVE-2025-62727
    "mcp>=1.28.1",              # Indirect; prevents CVE-2025-66416
    "pyasn1>=0.6.4",            # Indirect; prevents CVE-2026-30922
    "pydantic-ai>=1.106.0",      # Indirect; prevents CVE-2026-25580
    "filelock>=3.30.2",         # Indirect; prevents CVE-2025-68146
    "fastmcp>=3.4.4",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
    "anthropic>=0.117.0",        # Indirect; prevents CVE-2026-34452, CVE-2026-34450
    "aiohttp>=3.14.1",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "mako>=1.3.12",             # Indirect; prevents CVE-2026-41205 (CVE-2026-44307 has no fix yet)
]

[project.scripts]
server = "server:main"

[tool.uv.sources]
a2a-samples = { workspace = true }

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.setuptools]
py-modules = ["agent", "agent_executor", "server", "__main__"]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"
