[project]
name = "a2a-sample-agent-langgraph"
version = "0.1.0"
description = "Sample LangGraph currency agent with A2A Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0,<1.2.0",
    "click>=8.4.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.14.1",
    "openinference-instrumentation-langchain>=0.1.66",
    "opentelemetry-exporter-otlp>=1.42.1",
    # The following are to avoid CVEs reported by Trivy and checked by our CI
    "urllib3>=2.7.0",
    "starlette>=1.2.1",
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "protobuf>=6.33.5",         # prevents CVE-2026-0994
    "langgraph-checkpoint>=4.1.1",
    "langchain-core>=1.4.0",   # Indirect; prevents CVE-2026-34070
    "orjson>=3.11.6",          # Indirect; prevents CVE-2025-67221
    "langsmith>=0.8.9",        # Indirect; prevents CVE-2026-45134
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
