[project]
name = "a2a-sample-agent-langgraph"
version = "0.1.0"
description = "Sample LangGraph currency agent with A2A Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0,<2",
    "click>=8.4.2",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "langchain-openai>=1.3.4",
    "pydantic-settings>=2.14.2",
    "openinference-instrumentation-langchain>=0.1.67",
    "opentelemetry-exporter-otlp>=1.43.0",
    # The following are to avoid CVEs reported by Trivy and checked by our CI
    "urllib3>=2.7.0",
    "starlette>=1.3.1",
    "pyasn1>=0.6.4",            # Indirect; prevents CVE-2026-30922
    "protobuf>=6.33.5",         # prevents CVE-2026-0994
    "langgraph-checkpoint>=4.1.1",
    "langchain-core>=1.4.0",   # Indirect; prevents CVE-2026-34070
    "orjson>=3.11.6",          # Indirect; prevents CVE-2025-67221
    "langsmith>=0.10.1",        # Indirect; prevents CVE-2026-45134
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
