[project]
name = "cheerup-agent"
version = "0.0.1"
description = "A cheerful conversational agent that brightens your day."
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.0.3",
    "openai>=1.0.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.46.0",
    "opentelemetry-exporter-otlp",
]

[project.scripts]
server = "cheerup_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
