[project]
name = "claude-code-agent"
version = "0.0.1"
description = "A2A agent that drives Claude Code headlessly, one persistent session per A2A context."
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk==0.3.26",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.30",
]

[project.scripts]
server = "claude_code_agent.agent:run"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
