[project]
name = "file-organizer"
version = "0.0.1"
description = "Simple file organizer using A2A SDK and LangGraph"
authors = [
    { name = "Ethan Levine" }
]
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.26",
    "langgraph>=0.2.55",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=0.2.1",
    "langchain-openai>=0.3.7",
    "openinference-instrumentation-langchain>=0.1.63",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.2.2",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.29", # Indirect; prevents CVE-2026-24486
    "aiohttp>=3.13.5",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "langchain-classic>=1.0.7", # Indirect; prevents CVE-2026-45134
    "langsmith>=0.8.0",         # Indirect; prevents CVE-2026-45134
    "cryptography>=46.0.7,<47", # Indirect; prevents CVE-2026-26007
    "mcp>=1.23.0",              # Indirect; prevents CVE-2025-66416
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "pyjwt>=2.12.1",            # Indirect; prevents CVE-2026-32597
]

[project.scripts]
server = "file_organizer.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
