[project]
name = "file-organizer"
version = "0.0.1"
description = "Simple file organizer using A2A SDK and LangGraph"
authors = [
    { name = "Ethan Levine" }
]
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "openinference-instrumentation-langchain>=0.1.66",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.2.2",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-proto>=1.42.1", # (Old versions of this dependency use obsolete protobufs)
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "aiohttp>=3.14.0",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "langchain-classic>=1.0.7", # Indirect; prevents CVE-2026-45134
    "langsmith>=0.8.9",         # Indirect; prevents CVE-2026-45134
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "mcp>=1.27.2",              # Indirect; prevents CVE-2025-66416
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "pyjwt>=2.13.0",            # Indirect; prevents CVE-2026-32597
]

[project.scripts]
server = "file_organizer.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
