[project]
name = "file-organizer"
version = "0.0.1"
description = "Simple file organizer using A2A SDK and LangGraph"
authors = [
    { name = "Ethan Levine" }
]
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0,<2",
    "langgraph>=1.2.9",
    "langchain-core>=1.4.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "openinference-instrumentation-langchain>=0.1.67",
    "pydantic-settings>=2.14.2",
    "langchain-mcp-adapters>=0.3.0",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp>=1.44.0",
    "opentelemetry-proto>=1.42.1", # (Old versions of this dependency use obsolete protobufs)
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "aiohttp>=3.14.1",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "langchain-classic>=1.0.8", # Indirect; prevents CVE-2026-45134
    "langsmith>=0.10.5",         # Indirect; prevents CVE-2026-45134
    "cryptography>=49.0.0,<50", # Indirect; prevents CVE-2026-26007
    "mcp>=1.28.1",              # Indirect; prevents CVE-2025-66416
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
    "protobuf>=6.33.5,<7",      # Indirect; prevents CVE-2026-0994. Cap <7: opentelemetry-proto requires protobuf<7.0 (proto7 downgrades OTel and breaks startup)
    "pyasn1>=0.6.4",            # Indirect; prevents CVE-2026-30922
    "pyjwt>=2.13.0",            # Indirect; prevents CVE-2026-32597
]

[project.scripts]
server = "file_organizer.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
