[project]
name = "generic-agent"
version = "0.0.1"
description = "Simple ollama-based Langgraph agent with MCP tool calling."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.16",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "openinference-instrumentation-langchain>=0.1.66",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.2.2",
    "python-keycloak>=5.5.1",
    "opentelemetry-exporter-otlp",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.29", # Indirect; prevents CVE-2026-24486
    "langsmith>=0.8.6",         # Indirect; prevents CVE-2026-45134
]

[project.scripts]
server = "generic_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
