[project]
name = "generic-agent"
version = "0.0.1"
description = "Simple ollama-based Langgraph agent with MCP tool calling."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=1.1.2,<2",
    "langgraph>=1.2.9",
    "langchain-core>=1.5.1",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.4.1",
    "openinference-instrumentation-langchain>=0.1.67",
    "pydantic-settings>=2.14.2",
    "langchain-mcp-adapters>=0.3.0",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp>=1.44.0",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "langsmith>=0.10.10",         # Indirect; prevents CVE-2026-45134
    "pyasn1>=0.6.4",            # Indirect; prevents CVE-2026-30922
    "starlette>=1.3.1",         # Indirect; prevents CVE-2025-62727
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "mcp>=1.28.1",              # Indirect; prevents CVE-2025-66416
    "aiohttp>=3.14.3",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "cryptography>=49.0.0,<50", # Indirect; prevents CVE-2026-26007
]

[project.scripts]
server = "generic_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
