[project]
name = "git-issue-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Git issue Agent module"
dependencies = [
    "python-dotenv>=1.1.0",
    "a2a-sdk>=0.2.16",
    # We use 1.6.1 instead of the latest because
    # crewai requires openai>=2.30.0
    # but litellm requires openai==2.24.0
    "crewai[litellm]>=1.6.1",
    "litellm>=1.84.0",          # Indirect, prevents CVE-2026-42271
    "crewai-tools[mcp]>=1.6.1",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.28", # Indirect; prevents CVE-2026-24486
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "starlette>=0.49.1",        # Indirect; prevents CVE-2025-62727
    "pillow>=12.2.0",           # Indirect; prevents CVE-2026-40192
    "lxml>=6.1.0",              # Indirect; prevents CVE-2026-41066
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "a2a_agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
