[project]
name = "image-service"
version = "0.0.1"
description = "Simple LangGraph agent with MCP tool calling for image generation."
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.16",
    "langgraph>=0.2.55",
    "langchain-core>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.7",
    "openinference-instrumentation-langchain>=0.1.36",
    "pydantic-settings>=2.13.1",
    "langchain-mcp-adapters>=0.2.2",
    "python-keycloak>=5.5.1",
    "opentelemetry-exporter-otlp",
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.26", # Indirect; prevents CVE-2026-24486
]

[project.scripts]
server = "image_service.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
