[project]
name = "image-service"
version = "0.0.1"
description = "Simple LangGraph agent with MCP tool calling for image generation."
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.16",
    "langgraph>=0.2.55",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.7",
    "openinference-instrumentation-langchain>=0.1.36",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.2.2",
    "python-keycloak>=5.5.1",
    "opentelemetry-exporter-otlp",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.28", # Indirect; prevents CVE-2026-24486
    "aiohttp>=3.13.5",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "mcp>=1.23.0",              # Indirect; prevents CVE-2025-66416
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "cryptography>=46.0.5",     # Indirect; prevents CVE-2026-26007
    "pyjwt>=2.12.1",            # Indirect; prevents CVE-2026-32597
    "langchain-classic>=1.0.7", # Indirect; prevents CVE-2026-45134
    "langsmith>=0.8.0",         # Indirect; prevents CVE-2026-45134
]

[project.scripts]
server = "image_service.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
