[project]
name = "image-service"
version = "0.0.1"
description = "Simple LangGraph agent with MCP tool calling for image generation."
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.9",
    "langchain-core>=1.4.9",
    "langchain-community>=0.4.2",
    "a2a-sdk[http-server]>=1.1.0,<2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "openinference-instrumentation-langchain>=0.1.67",
    "pydantic-settings>=2.14.2",
    "langchain-mcp-adapters>=0.3.0",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-proto>=1.42.1", # (Old versions of this dependency use obsolete protobufs)
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "aiohttp>=3.14.0",          # Indirect; prevents CVE-2026-34525, CVE-2026-34516, CVE-2026-34515, CVE-2026-22815
    "mcp>=1.28.1",              # Indirect; prevents CVE-2025-66416
    "orjson>=3.11.6",           # Indirect; prevents CVE-2025-67221
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "pyasn1>=0.6.4",            # Indirect; prevents CVE-2026-30922
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "pyjwt>=2.13.0",            # Indirect; prevents CVE-2026-32597
    "langchain-classic>=1.0.8", # Indirect; prevents CVE-2026-45134
    "langsmith>=0.10.1",         # Indirect; prevents CVE-2026-45134
]

[project.scripts]
server = "image_service.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
