[project]
name = "reservation-service"
version = "0.1.0"
description = "Restaurant reservation agent using LangGraph and MCP tools"
authors = [
    { name = "Kagenti Contributors" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.16",
    "langgraph>=0.2.55",
    "langchain-core>=1.3.3",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.2.1",
    "langchain-openai>=1.2.1",
    "openinference-instrumentation-langchain>=0.1.65",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.1.0",
    "python-keycloak>=5.5.1",
    "opentelemetry-exporter-otlp",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
]

[project.scripts]
server = "reservation_service.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
