[project]
name = "reservation-service"
version = "0.1.0"
description = "Restaurant reservation agent using LangGraph and MCP tools"
authors = [
    { name = "Kagenti Contributors" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "langgraph>=1.2.9",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "openinference-instrumentation-langchain>=0.1.67",
    "pydantic-settings>=2.14.2",
    "langchain-mcp-adapters>=0.3.0",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp>=1.43.0",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32",  # Indirect; prevents CVE-2026-24486
    "langsmith>=0.10.1",          # Indirect; prevents CVE-2026-45134
]

[project.scripts]
server = "reservation_service.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
