[project]
name = "sandbox-agent"
version = "0.0.1"
description = "LangGraph agent with sandboxed shell execution and per-context workspace isolation."
authors = []
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.2.16",
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.3.7",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.8.1",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-starlette",
    "httpx>=0.27.0",
    "uvicorn>=0.40.0",
    "starlette>=0.52.1",
]

[project.scripts]
server = "sandbox_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
