[project]
name = "simple-generalist"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "A generalist AG2 agent exposed via A2A, powered by MCP tools"
dependencies = [
    "python-dotenv>=1.2.2",
    "a2a-sdk[http-server]>=1.1.0,<2",
    "ag2[openai,mcp,tracing]>=0.14.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "urllib3>=2.7.0",            # Indirect; prevents CVE-2026-44431, CVE-2026-44432
    "python-multipart>=0.0.32",  # Indirect; prevents CVE-2026-24486
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[project.scripts]
server = "simple_generalist.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"