[project]
name = "slack-researcher"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Slack research Agent module"
dependencies = [
    "ag2[openai,mcp]>=0.14.0",
    "tavily-python>=0.7.26",
    "python-dotenv>=1.2.2",
    "a2a-sdk[http-server]>=1.1.1",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "a2a_agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
