[project]
name = "trivia-agent"
version = "0.0.1"
description = "Conversational trivia quiz agent using Ollama."
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
    "opentelemetry-exporter-otlp>=1.42.1",
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2026-44431, CVE-2026-44432
    "pyasn1>=0.6.3",    # Indirect; prevents CVE-2026-30922
]

[project.scripts]
server = "trivia_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
