[project]
name = "weather-service"
version = "0.0.1"
description = "Simple ollama-based Langgraph agent with MCP tool calling."
authors = [
    { name = "Paolo Dettori" }
]
readme = "README.md"
license = { text = "Apache" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.26",
    "langgraph>=1.1.3",
    "langchain-core>=1.2.31",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.7",
    "mlflow[langchain,kubernetes]>=3.11.1,<4",
    "pydantic-settings>=2.8.1",
    "langchain-mcp-adapters>=0.1.0",
    "python-keycloak>=7.1.1",
    "opentelemetry-exporter-otlp",
    # Auto-instrument httpx so outgoing MCP tool calls propagate traceparent
    "opentelemetry-instrumentation-httpx>=0.49b0",
    # OpenTelemetry GenAI semantic convention instrumentation
    # Emits spans with gen_ai.* attributes for MLflow compatibility
    "opentelemetry-instrumentation-openai>=0.60.0",
    # OpenInference for LangChain instrumentation and AGENT span semantics
    "openinference-semantic-conventions>=0.1.12",
    "openinference-instrumentation-langchain>=0.1.27",
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.22", # Indirect; prevents CVE-2026-24486
    "cryptography>=46.0.5",     # Indirect; prevents CVE-2026-26007
    "langgraph-checkpoint>=3.0.0", # Indirect; prevents CVE-2025-64439
    "mcp>=1.23.0",              # Indirect; prevents CVE-2025-66416
    "protobuf>=6.33.5",         # Indirect; prevents CVE-2026-0994
    "starlette>=0.49.1",        # Indirect; prevents CVE-2025-62727
    "pyasn1>=0.6.3",            # Indirect; prevents CVE-2026-30922
    "aiohttp>=3.13.3",          # Indirect; prevents CVE-2025-69223
]

[project.scripts]
server = "weather_service.agent:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
